--- a/practice/src/sass/templates/_footer.sass
+++ b/practice/src/sass/templates/_footer.sass
@@ -6,7 +6,7 @@
     max-width: 63.07rem
     // max-height: 33rem
     margin: auto
-    margin-bottom: 3.714rem
+    margin-bottom: 2rem
     margin-top: -18.8rem
     padding: 1rem  2.5rem 2.7rem
     color: $light
@@ -41,6 +41,44 @@
     padding: 1.285rem 4.785rem
   &__menu
     background-color: $dark
-    padding: 4.285rem 0
+    padding: 3.5rem 0
     width: 100%
-     
+  &__description
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    margin: auto
+    font-family: Yeseva One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.428rem;
+    line-height: 2rem;
+    text-transform: uppercase;
+    color: $primary
+  &__adress
+    display: block
+    width: 100%
+    text-align: center
+  &__phone
+    text-decoration: none
+    color: $primary
+  &__image
+    min-height: 12px
+    width: auto
+    margin: auto
+  &__icon
+    display: flex
+    align-items: center
+    justify-content: center
+    width: 28px
+    height: 28px
+    border-radius: 50%
+    background-color: $primary
+    margin: 0.7rem 0.5rem
+  &__map
+    margin: auto
+    width: 100%
+    height: 465px
+    margin-top: 2.1rem
+    margin-bottom: 4.7rem
+
