--- a/practice/src/sass/templates/_steps.sass
+++ b/practice/src/sass/templates/_steps.sass
@@ -1,6 +1,13 @@
 .steps
-  padding-top: 0
+  position: relative
+  padding-top: 35rem
   padding-bottom: 35.8rem
+  &::before
+    content: ''
+    z-index: 0
+    width: 100%
+    height: 400px
+    position: absolute
   &__container
     &--relative
       position: relative
